--- a/reactlogin/src/App.css
+++ b/reactlogin/src/App.css
@@ -1,6 +1,6 @@
 .loginSection {
   width: 28em;
-  height: 30em;
+  height: 20em;
   border: 1px solid rgba(138, 155, 248, 0.938);
   border-radius: 0.5em;
   margin: 5em auto;
@@ -14,4 +14,15 @@
   display: flex;
   flex-flow: row nowrap;
   gap: 1em;
+}
+.inputs {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+p{
+  color: black !important;
 }
