--- a/reactlogin/src/components/Input/input.css
+++ b/reactlogin/src/components/Input/input.css
@@ -3,6 +3,8 @@ input {
     padding: 0.5em 1em;
     border: 1px solid rgba(163, 162, 162, 0.808);
     border-radius: 0.2em;
+    color: black !important; 
+
 }
 label {
     color: rgb(83, 83, 83) !important;
