--- a/reactlogin/src/components/Header/header.css
+++ b/reactlogin/src/components/Header/header.css
@@ -1,6 +1,3 @@
-* {
-    color: rgb(233, 232, 232) !important;
-}
 div.header {
     display: flex;
     flex-flow: row nowrap;
@@ -10,6 +7,9 @@ div.header {
     width: 100%;
     height: 4em;
     background-color: rgba(85, 106, 224, 0.938);
+    a, h1 {
+        color: rgb(238, 236, 236);
+    }
 }
 .navLinks {
     gap: 1em;
