--- a/reactlogin/src/components/Input/input.css
+++ b/reactlogin/src/components/Input/input.css
@@ -4,17 +4,17 @@ input {
     border: 1px solid rgba(163, 162, 162, 0.808);
     border-radius: 0.2em;
     color: black !important; 
+    width: 100%;
 
 }
 label {
     color: rgb(83, 83, 83) !important;
+    font-size: 0.8em;
 }
 div.input {
-    width: 70%;
-    margin: 0em auto;
+    width: 100%;
     display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1em;
+    flex-flow: column wrap;
+    align-items: start;
+    justify-content: center;
 }
