--- a/reactlogin/src/components/Input/input.css
+++ b/reactlogin/src/components/Input/input.css
@@ -18,3 +18,11 @@ div.input {
     align-items: start;
     justify-content: center;
 }
+@media (max-width: 500px) {
+    label {
+        font-size: 0.5em !important;
+    }
+    input {
+        font-size: 0.7em;
+    }
+}
