--- a/reactlogin/src/components/Header/header.css
+++ b/reactlogin/src/components/Header/header.css
@@ -7,10 +7,19 @@ div.header {
     width: 100%;
     height: 4em;
     background-color: rgba(85, 106, 224, 0.938);
-    a, h1 {
+
+    a,
+    h1 {
         color: rgb(238, 236, 236);
     }
 }
+
 .navLinks {
     gap: 1em;
+}
+
+@media (max-width: 500px) {
+    .navLinks {
+        display: none !important;
+    }
 }
